added jupyter notebook to find countries with major projects

--- a/data_wrangling_json/countries with major projects.ipynb
+++ b/data_wrangling_json/countries with major projects.ipynb
@@ -1,13 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import json, pandas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# load data from file and get country, project details"
    ]
   },
   {
@@ -19,12 +33,49 @@
     "# load the json data into python variable\n",
     "\n",
     "with open('data/world_bank_projects.json') as f:\n",
-    "    data = json.load(f)"
+    "    data = json.load(f)\n",
+    "    \n",
+    "# from json array , look for only country and project, and add it to a set of arrays\n",
+    "\n",
+    "country, project = [], []\n",
+    "for item in data:\n",
+    "    country.append(item['countryshortname'])\n",
+    "    project.append(item['project_name'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# convert set of arrays into pandas dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert the set of arrays into pandas dataset\n",
+    "df = pd.DataFrame([country, project]).T\n",
+    "\n",
+    "# add headers to the dataframe\n",
+    "df.columns = [\n",
+    "  'country',\n",
+    "  'project'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# get countries with major project with groupby and nlargest methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -181,42 +232,20 @@
        "76                            Nigeria               7"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# from json array , look for only country and project, and add it to a set of arrays\n",
     "\n",
-    "country, project = [], []\n",
-    "for item in data:\n",
-    "    country.append(item['countryshortname'])\n",
-    "    project.append(item['project_name'])\n",
-    "    \n",
-    "    \n",
-    "# convert the set of arrays into pandas dataset\n",
-    "df = pd.DataFrame([country, project]).T\n",
-    "\n",
-    "# add headers to the dataframe\n",
-    "df.columns = [\n",
-    "  'country',\n",
-    "  'project'\n",
-    "]\n",
     "\n",
     "# using group by, find the number of projects done in each country\n",
     "df1 = df.groupby(['country']).size().reset_index(name='project_counts')\n",
     "\n",
     "#print the top 20 countries with major projects\n",
-    "df1.nlargest(20, 'project_counts')"
+    "df1.nlargest(20, 'project_counts')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
