added jupyter notebook to find countries with major projects

--- a/data_wrangling_json/countries with major projects.ipynb
+++ b/data_wrangling_json/countries with major projects.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>11</td>\n",
-       "      <td>Miscellaneous</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Ethiopia</td>\n",
        "      <td>Ethiopia General Education Quality Improvement...</td>\n",
        "    </tr>\n",
@@ -153,7 +153,7 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>6</td>\n",
-       "      <td>Miscellaneous</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Kenya</td>\n",
        "      <td>Additional Financing for Cash Transfers for Or...</td>\n",
        "    </tr>\n",
@@ -181,7 +181,7 @@
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>8</td>\n",
-       "      <td>Miscellaneous</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>China</td>\n",
        "      <td>China Renewable Energy Scale-Up Program Phase II</td>\n",
        "    </tr>\n",
@@ -195,7 +195,7 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>7</td>\n",
-       "      <td>Miscellaneous</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>India</td>\n",
        "      <td>Rajasthan Road Sector Modernization Project</td>\n",
        "    </tr>\n",
@@ -230,7 +230,7 @@
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>2</td>\n",
-       "      <td>Miscellaneous</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>South Sudan</td>\n",
        "      <td>Southern Sudan Emergency Food Crisis Response ...</td>\n",
        "    </tr>\n",
@@ -265,7 +265,7 @@
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>4</td>\n",
-       "      <td>Miscellaneous</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Ghana</td>\n",
        "      <td>GH eTransform Ghana</td>\n",
        "    </tr>\n",
@@ -335,7 +335,7 @@
        "    <tr>\n",
        "      <th>1477</th>\n",
        "      <td>11</td>\n",
-       "      <td>Miscellaneous</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>West Bank and Gaza</td>\n",
        "      <td>Water Supply and Sanitation Improvements for W...</td>\n",
        "    </tr>\n",
@@ -363,7 +363,7 @@
        "    <tr>\n",
        "      <th>1481</th>\n",
        "      <td>5</td>\n",
-       "      <td>Miscellaneous</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Bangladesh</td>\n",
        "      <td>Revision and Alignment of NAP with UNCCD 10-ye...</td>\n",
        "    </tr>\n",
@@ -377,7 +377,7 @@
        "    <tr>\n",
        "      <th>1483</th>\n",
        "      <td>8</td>\n",
-       "      <td>Miscellaneous</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Nepal</td>\n",
        "      <td>Nepal: Pilot Project for Seismic School Safety...</td>\n",
        "    </tr>\n",
@@ -433,7 +433,7 @@
        "    <tr>\n",
        "      <th>1491</th>\n",
        "      <td>6</td>\n",
-       "      <td>Miscellaneous</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Guinea</td>\n",
        "      <td>Second Emergency Agricultural Productivity Sup...</td>\n",
        "    </tr>\n",
@@ -494,7 +494,7 @@
       "text/plain": [
        "     code                                          name  \\\n",
        "0       8                             Human development   \n",
-       "1      11                                 Miscellaneous   \n",
+       "1      11                                           NaN   \n",
        "2       1                           Economic management   \n",
        "3       6         Social protection and risk management   \n",
        "4       5                         Trade and integration   \n",
@@ -506,23 +506,23 @@
        "10      5                         Trade and integration   \n",
        "11      4      Financial and private sector development   \n",
        "12      6         Social protection and risk management   \n",
-       "13      6                                 Miscellaneous   \n",
+       "13      6                                           NaN   \n",
        "14      2                      Public sector governance   \n",
        "15      4      Financial and private sector development   \n",
        "16     11  Environment and natural resources management   \n",
-       "17      8                                 Miscellaneous   \n",
+       "17      8                                           NaN   \n",
        "18     10                             Rural development   \n",
-       "19      7                                 Miscellaneous   \n",
+       "19      7                                           NaN   \n",
        "20      2                      Public sector governance   \n",
        "21      2                      Public sector governance   \n",
        "22      2                      Public sector governance   \n",
        "23     10                             Rural development   \n",
-       "24      2                                 Miscellaneous   \n",
+       "24      2                                           NaN   \n",
        "25     10                             Rural development   \n",
        "26      6         Social protection and risk management   \n",
        "27      6         Social protection and risk management   \n",
        "28     11  Environment and natural resources management   \n",
-       "29      4                                 Miscellaneous   \n",
+       "29      4                                           NaN   \n",
        "...   ...                                           ...   \n",
        "1469    8                             Human development   \n",
        "1470    9                             Urban development   \n",
@@ -532,13 +532,13 @@
        "1474    2                      Public sector governance   \n",
        "1475    2                      Public sector governance   \n",
        "1476   10                             Rural development   \n",
-       "1477   11                                 Miscellaneous   \n",
+       "1477   11                                           NaN   \n",
        "1478    8                             Human development   \n",
        "1479    7                   Social dev/gender/inclusion   \n",
        "1480   11  Environment and natural resources management   \n",
-       "1481    5                                 Miscellaneous   \n",
+       "1481    5                                           NaN   \n",
        "1482    6         Social protection and risk management   \n",
-       "1483    8                                 Miscellaneous   \n",
+       "1483    8                                           NaN   \n",
        "1484    4      Financial and private sector development   \n",
        "1485    7                   Social dev/gender/inclusion   \n",
        "1486    8                             Human development   \n",
@@ -546,7 +546,7 @@
        "1488    2                      Public sector governance   \n",
        "1489    8                             Human development   \n",
        "1490   10                             Rural development   \n",
-       "1491    6                                 Miscellaneous   \n",
+       "1491    6                                           NaN   \n",
        "1492   10                             Rural development   \n",
        "1493   10                             Rural development   \n",
        "1494   10                             Rural development   \n",
@@ -684,7 +684,7 @@
        "[1499 rows x 4 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,133 +698,51 @@
     "# normalize data to get theme details from json nested key\n",
     "df = json_normalize(data, 'mjtheme_namecode', ['countryshortname', 'project_name'])\n",
     "\n",
-    "# fill blank theme names with Miscellaneous\n",
-    "df['name'] = df['name'].replace(r'^\\s*$', np.nan, regex=True).fillna('Miscellaneous')\n",
+    "# fill blank theme names with NA\n",
+    "df['name'] = df['name'].replace(r'^\\s*$', np.nan, regex=True)\n",
     "\n",
     "df\n",
-    "\n",
-    "    "
+    "  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# get countries with major project with groupby and nlargest methods"
+    "# get countries with major project "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>countryshortname</th>\n",
-       "      <th>project_counts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>Indonesia</td>\n",
-       "      <td>56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>India</td>\n",
-       "      <td>51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Bangladesh</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>China</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Africa</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>Yemen, Republic of</td>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>Morocco</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>Mozambique</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       countryshortname  project_counts\n",
-       "45            Indonesia              56\n",
-       "44                India              51\n",
-       "112             Vietnam              43\n",
-       "8            Bangladesh              41\n",
-       "14               Brazil              41\n",
-       "23                China              40\n",
-       "1                Africa              39\n",
-       "115  Yemen, Republic of              34\n",
-       "69              Morocco              32\n",
-       "70           Mozambique              31"
+       "Indonesia             56\n",
+       "India                 51\n",
+       "Vietnam               43\n",
+       "Brazil                41\n",
+       "Bangladesh            41\n",
+       "China                 40\n",
+       "Africa                39\n",
+       "Yemen, Republic of    34\n",
+       "Morocco               32\n",
+       "Mozambique            31\n",
+       "Name: countryshortname, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
+    "df.countryshortname.value_counts()[:10]\n",
     "\n",
-    "# using group by, find the number of projects done in each country\n",
-    "df1 = df.groupby(['countryshortname']).size().reset_index(name='project_counts')\n",
-    "\n",
-    "#print the top 10 countries with major projects\n",
-    "df1.nlargest(10, 'project_counts')\n"
+    "\n"
    ]
   },
   {
@@ -836,126 +754,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>code</th>\n",
-       "      <th>name</th>\n",
-       "      <th>theme_counts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Environment and natural resources management</td>\n",
-       "      <td>223</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Rural development</td>\n",
-       "      <td>202</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Human development</td>\n",
-       "      <td>197</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Public sector governance</td>\n",
-       "      <td>184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Social protection and risk management</td>\n",
-       "      <td>158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Financial and private sector development</td>\n",
-       "      <td>130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Social dev/gender/inclusion</td>\n",
-       "      <td>119</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Trade and integration</td>\n",
-       "      <td>72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Urban development</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Economic management</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   code                                          name  theme_counts\n",
-       "4    11  Environment and natural resources management           223\n",
-       "3    10                             Rural development           202\n",
-       "18    8                             Human development           197\n",
-       "7     2                      Public sector governance           184\n",
-       "15    6         Social protection and risk management           158\n",
-       "10    4      Financial and private sector development           130\n",
-       "17    7                   Social dev/gender/inclusion           119\n",
-       "13    5                         Trade and integration            72\n",
-       "21    9                             Urban development            47\n",
-       "0     1                           Economic management            33"
+       "Environment and natural resources management    250\n",
+       "Rural development                               216\n",
+       "Human development                               210\n",
+       "Public sector governance                        199\n",
+       "Financial and private sector development        146\n",
+       "Social dev/gender/inclusion                     130\n",
+       "Trade and integration                            77\n",
+       "Urban development                                50\n",
+       "Rule of law                                      15\n",
+       "Name: name_clean, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# using group by, find the theme count\n",
-    "df2 = df.groupby(['code', 'name']).size().reset_index(name='theme_counts')\n",
+    "def get_mapping():\n",
+    "    theme_lookup = {}\n",
+    "    theme_name = df[df.name != ''].drop_duplicates()\n",
+    "    for item in theme_name.to_dict('records'):\n",
+    "        theme_lookup.update({item['code']: item['name']})\n",
+    "    return theme_lookup\n",
+    "  \n",
+    "# store the dict to lookup theme name for code\n",
+    "mapping = get_mapping()\n",
     "\n",
+    "# update dataframe with theme_name in a new column\n",
+    "df['name_clean'] = df.code.apply(lambda row: mapping.get(row))\n",
     "\n",
-    "#print the top 10 themes among projects\n",
-    "df2.nlargest(10, 'theme_counts')"
+    "df.name_clean.value_counts()[:10]\n"
    ]
   },
   {
