updated logistic regression notebook

--- a/logistic_regression/Mini_Project_Logistic_Regression.ipynb
+++ b/logistic_regression/Mini_Project_Logistic_Regression.ipynb
@@ -1371,11 +1371,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Because the numerator of the posterior for female is greater than male, then we predict that the person is female."
+   ]
   }
  ],
  "metadata": {
